Updated welcome page

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <p>
-        Did it work???
+        Welcome to My webpage!!
+        It is under construction so please watch this space
     </p>
 </body>
 </html>
