Experimenting with if statements

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -5,8 +5,8 @@
     <title>Welcome page</title>
 </head>
 <body>
+    <h1> Welcome to My webpage!!</h1>
     <p>
-        Welcome to My webpage!!
         It is under construction so please watch this space
     </p>
 </body>
