Updated to include second button and 3 attempts

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -6,8 +6,12 @@
 </head>
 <body>
     <h1> Welcome to My webpage!!</h1>
+
     <p>
         It is under construction so please watch this space
+
     </p>
+
 </body>
+<p><input type="button" value = "google" onclick="javascript:window.location='https://www.google.com';"></p>
 </html>
