Updated button fuctionality

--- a/templates/login.html
+++ b/templates/login.html
@@ -20,6 +20,6 @@
 	</div>
 </div>
 </div>
-<p><input type="button" value = "Git Hub" onclick="https://github.com/sahlamina';"></p>
+<p><input type="button" value = "Git Hub" onclick="javascript:window.location='https://github.com/sahlamina';"></p>
 </form>
 {% endblock %}
